force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This custom field is defaulted to NOW() and used to query the latest record from custom metadata as there is no standard created date or last modified date field in Custom metadata</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>