force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Log_to_System_Debug__c.field-meta.xml
<CustomField>
    <fullName>Log_to_System_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All the logs should be sent to System.debug if this field is checked in</description>
    <label>Log to System Debug</label>
    <type>Checkbox</type>
</CustomField>